--- a/analysis/preregistration_template.Rmd
+++ b/analysis/preregistration_template.Rmd
@@ -282,7 +282,7 @@ HF- I would put 5.4 and it's sbsections up in section 4 and get rid of section 5
 
 ### 5.4.2 Sensitivity Analyses
 
-*Sensitivity analysis examines how uncertainty in model outputs can be apportioned to different sources of uncertainty in model input [@Saltelli2019]. Model sensitivity can be evaluated using 3 approaches: 1. deterministic sensitivity, stochastic sensitivity (variability in the model), or scenario sensitivity (effect of changes based on scenarios). Describe any sensitivity analyses you will conduct by specifying which parameters will be held constant, which will be varied, and the range and intervals of values over which those parameterrs will be varied. State the primary objective of each sensitvity analysis, for example, to identify which input variables contribute the most to model uncertainty so that these variables can be targeted for further data collection, or altertantively to identify which variables or factors contribute little to overall model outputs, and so can be ‚Äòdropped' from future iterations of the model [@Saltelli2019].*
+*Sensitivity analysis examines how uncertainty in model outputs can be apportioned to different sources of uncertainty in model input [@Saltelli2019]. Model sensitivity can be evaluated using 3 approaches: 1. deterministic sensitivity, stochastic sensitivity (variability in the model), or scenario sensitivity (effect of changes based on scenarios). Describe any sensitivity analyses you will conduct by specifying which parameters will be held constant, which will be varied, and the range and intervals of values over which those parameters will be varied. State the primary objective of each sensitivity analysis, for example, to identify which input variables contribute the most to model uncertainty so that these variables can be targeted for further data collection, or alternatively to identify which variables or factors contribute little to overall model outputs, and so can be ‚'dropped' from future iterations of the model [@Saltelli2019].*
 
 ### 5.4.3 Other simulation experiments and robustness analyses
 
